// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NavBar Desktop 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <header>
    <a
      href="https://www.smarterbalanced.org/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="Smarter Balanced logo"
        className="sb-logo"
        src="test-file-stub"
      />
      <style
        jsx={true}
      >
        
      .sb-logo {
        width: 128px;
        padding: 3px 20px 3px 3px;
      }

      @media (max-width: 950px) {
        .sb-logo {
          width: 100px;
        }
      }
    
      </style>
    </a>
    <nav>
      <div
        className="left-content"
      />
      <div
        className="right-content"
      >
        <span
          className="right-spacing grow-search"
        >
          <div
            className="search-bar"
          >
            <input
              aria-label="Search"
              className="field"
              onChange={[Function]}
              onClick={[Function]}
              onKeyPress={[Function]}
              placeholder="Search..."
              type="search"
              value=""
            />
            <button
              aria-label="Submit"
              className="button"
              onClick={[Function]}
              type="submit"
            >
              <svg
                fill="none"
                height={16}
                stroke="#ffffff"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="11"
                  cy="11"
                  r="8"
                />
                <line
                  x1="21"
                  x2="16.65"
                  y1="21"
                  y2="16.65"
                />
              </svg>
            </button>
            <style
              jsx={true}
            >
              
          .search-bar {
            display: flex;
            min-height: 2em;
          }
          .button {
            align-items: center;
            background-color: #63666A;
            border-radius: 0 5px 5px 0;
            border-style: none;
            display: flex;
            height: auto;
            justify-content: center;
            min-height: 2em;
          }
          .field {
            border-color: #63666A;
            border-radius: 5px 0 0 5px;
            border-style: solid;
            color: #63666A;
            height: auto;
            min-height: 2em;
            padding: 0 0.5em;
            flex-grow: 1;
            font-size: 14px;
          }
          @media (max-width: 950px) {
            .field {
              width: 0; //needed so browser will shrink it past default size
            }
          }
        
            </style>
          </div>
        </span>
        <span
          className="right-spacing"
        >
          <a
            aria-label="Help"
            className="help"
            href="/help"
            onClick={[Function]}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "textDecoration": "none",
              }
            }
          >
            <svg
              fill="none"
              height={35}
              stroke="#63666A"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={35}
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <line
                x1="12"
                x2="12"
                y1="17"
                y2="17"
              />
            </svg>
          </a>
        </span>
      </div>
    </nav>
    <style
      jsx={true}
    >
      
        header {
          display: flex;
          padding: 20px / 2;
          background-color: #ebebeb;
          box-shadow: 0 0.15em 0.35em 0 rgba(0,0,0,0.135);
        }

        nav {
          display: flex;
          flex-grow: 1;
          font-family: PT Sans Caption;
          justify-content: space-between;
          padding: 20px / 2;
        }

        .right-spacing {
          margin-right: 20px;
        }

        .left-content,
        .right-content {
          align-items: center;
          display: flex;
          justify-content: flex-end;
        }
        .right-content {
          flex-grow: 1;
        }

        .help {
          height: 52px;
        }

        @media (max-width: 950px) {
          .grow-search {
            flex-grow: 1;
          }
          .right-spacing {
            margin-right: 10px;
          }
        }

        .hidden {
          visibility: hidden;
        }
      
    </style>
    <style
      global={true}
      jsx={true}
    >
      
    </style>
  </header>
</div>
`;

exports[`Storyshots NavBar Mobile 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <nav>
    <a
      href="/"
      onClick={[Function]}
      style={
        Object {
          "color": "#63666A",
          "textDecoration": "none",
        }
      }
    >
      <div>
        <svg
          fill="none"
          height={25}
          stroke="#63666A"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={25}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
          <polyline
            points="9 22 9 12 15 12 15 22"
          />
        </svg>
        Home
      </div>
    </a>
    <a
      href="/search"
      onClick={[Function]}
      style={
        Object {
          "color": "#63666A",
          "textDecoration": "none",
        }
      }
    >
      <div>
        <svg
          fill="none"
          height={25}
          stroke="#63666A"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={25}
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          />
          <line
            x1="21"
            x2="16.65"
            y1="21"
            y2="16.65"
          />
        </svg>
        Search
      </div>
    </a>
    <a
      href="/search"
      onClick={[Function]}
      style={
        Object {
          "color": "#63666A",
          "textDecoration": "none",
        }
      }
    >
      <div>
        <svg
          fill="none"
          height={25}
          stroke="#63666A"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={25}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        Explore
      </div>
    </a>
    <a
      href="/resources"
      onClick={[Function]}
      style={
        Object {
          "color": "#63666A",
          "textDecoration": "none",
        }
      }
    >
      <div>
        <svg
          fill="none"
          height={25}
          stroke="#63666A"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={25}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="7"
            width="7"
            x="3"
            y="3"
          />
          <rect
            height="7"
            width="7"
            x="14"
            y="3"
          />
          <rect
            height="7"
            width="7"
            x="14"
            y="14"
          />
          <rect
            height="7"
            width="7"
            x="3"
            y="14"
          />
        </svg>
        Resources
      </div>
    </a>
    <style
      jsx={true}
    >
      
      nav {
        position: fixed;
        bottom: 0;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        min-height: 40px;
        background-color: #ebebeb;
        width: 100vw;
      }
      div {
        display: flex;
        flex-direction: column;
        align-items: center;
        font-size: 0.75em;
        padding: 3px;
      }
    
    </style>
  </nav>
</div>
`;

exports[`Storyshots NavBar/Primitives Header Logo 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <a
    href="https://www.smarterbalanced.org/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Smarter Balanced logo"
      className="sb-logo"
      src="test-file-stub"
    />
    <style
      jsx={true}
    >
      
      .sb-logo {
        width: 128px;
        padding: 3px 20px 3px 3px;
      }

      @media (max-width: 950px) {
        .sb-logo {
          width: 100px;
        }
      }
    
    </style>
  </a>
</div>
`;

exports[`Storyshots NavBar/Primitives Main Menu 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div
    className="main-menu"
  >
    <a
      className="nav-item"
      href="/"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div>
        <svg
          fill="none"
          height={35}
          stroke="#63666A"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={35}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
          />
          <polyline
            points="9 22 9 12 15 12 15 22"
          />
        </svg>
        <p>
          Home
        </p>
        <style
          jsx={true}
        >
          
      p {
        color: #63666A;
        margin-left: 5px;
      }
      div {
        align-items: center;
        display: flex;
        justify-content: flex-end;
        margin-right: 20px;
      }

      @media (max-width: 950px) {
        p {
          display: none;
        }
      }
    
        </style>
      </div>
    </a>
    <a
      className="nav-item"
      href="/search"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div>
        <svg
          fill="none"
          height={35}
          stroke="#63666A"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={35}
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          />
          <line
            x1="21"
            x2="16.65"
            y1="21"
            y2="16.65"
          />
        </svg>
        <p>
          Search
        </p>
        <style
          jsx={true}
        >
          
      p {
        color: #63666A;
        margin-left: 5px;
      }
      div {
        align-items: center;
        display: flex;
        justify-content: flex-end;
        margin-right: 20px;
      }

      @media (max-width: 950px) {
        p {
          display: none;
        }
      }
    
        </style>
      </div>
    </a>
    <a
      className="nav-item"
      href="/explore?filter=open"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div>
        <svg
          fill="none"
          height={35}
          stroke="#63666A"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={35}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <p>
          Explore
        </p>
        <style
          jsx={true}
        >
          
      p {
        color: #63666A;
        margin-left: 5px;
      }
      div {
        align-items: center;
        display: flex;
        justify-content: flex-end;
        margin-right: 20px;
      }

      @media (max-width: 950px) {
        p {
          display: none;
        }
      }
    
        </style>
      </div>
    </a>
    <a
      className="nav-item"
      href="/resources"
      onClick={[Function]}
      style={
        Object {
          "textDecoration": "none",
        }
      }
    >
      <div>
        <svg
          fill="none"
          height={35}
          stroke="#63666A"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={35}
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="7"
            width="7"
            x="3"
            y="3"
          />
          <rect
            height="7"
            width="7"
            x="14"
            y="3"
          />
          <rect
            height="7"
            width="7"
            x="14"
            y="14"
          />
          <rect
            height="7"
            width="7"
            x="3"
            y="14"
          />
        </svg>
        <p>
          Resources
        </p>
        <style
          jsx={true}
        >
          
      p {
        color: #63666A;
        margin-left: 5px;
      }
      div {
        align-items: center;
        display: flex;
        justify-content: flex-end;
        margin-right: 20px;
      }

      @media (max-width: 950px) {
        p {
          display: none;
        }
      }
    
        </style>
      </div>
    </a>
    <style
      jsx={true}
    >
      
        .main-menu {
          display: flex;
          flex-wrap: nowrap;
        }
      
    </style>
  </div>
</div>
`;

exports[`Storyshots NavBar/Primitives Menu Item 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <p>
      Menu Item
    </p>
    <style
      jsx={true}
    >
      
      p {
        color: #63666A;
        margin-left: 5px;
      }
      div {
        align-items: center;
        display: flex;
        justify-content: flex-end;
        margin-right: 20px;
      }

      @media (max-width: 950px) {
        p {
          display: none;
        }
      }
    
    </style>
  </div>
</div>
`;
